Fixed spacing and arrangement.

--- a/frontend/src/styles/TeamStyle.css
+++ b/frontend/src/styles/TeamStyle.css
@@ -1,10 +1,23 @@
 .card{
     text-align: center;
+    width: 350px;
+    padding: 30px;
+    margin-right: 20px;
+    margin-top: 20px;
     
 }
 .card-title{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-weight: bold;
+    font-size: 150%;
+}
+.card-text{
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
     font-size: 100%;
+}
+.card-image{
+    width: 50%;
 }
